--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "letts-core-mcp-low-level",
+  "name": "mcp-transactions",
   "version": "0.0.1",
-  "description": "letts-core-mcp-framework MCP server",
+  "description": "MCP Transactions",
   "type": "module",
-  "bin": {
-    "letts-core-mcp-framework": "./dist/index.js"
-  },
   "files": [
     "dist"
   ],
+  "bin":{
+    "mcp-transactions": "./dist/index-stdio.js"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -17,7 +17,7 @@
     "dev": "nodemon --exec tsx src/index.ts"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.8.0",
+    "@modelcontextprotocol/sdk": "^1.11.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "luxon": "^3.1.0",
